--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -71,7 +71,7 @@
     <div class="col-md-4">
       <div class="panel panel-default">
         <div class="panel-heading preview">
-          <%= image_tag room.photos[0].image.url(:medium) if room.photos.length > 0 %>
+          <%= image_tag room.photos[0].image.url() if room.photos.length > 0 %>
         </div>
         <div class="panel-body">
           <%= image_tag avatar_url(room.user), class: "img-circle avatar-small" %>&nbsp;
