--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,12 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3 text-center">
     
-    <%= link_to "Sign In with Facebook", user_facebook_omniauth_authorize_path(:facebook), class: "btn btn-primary" %>
+    <div class="actions">
+      <%= link_to user_facebook_omniauth_authorize_path, :class => "btn btn-primary facebook form-control" do %>
+        <i class="fa fa-facebook button-icon"></i>
+        <span>  Sign up with Facebook</span>
+      <% end %>
+    </div>
     
     <h2>Sign up</h2>
 
